--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Autolinium - AI Automation Agency</title>
+    <meta
+      name="description"
+      content="Autolinium builds AI agents, custom CRMs, automations, and mobile apps to streamline your business operations."
+    />
+    <meta
+      name="keywords"
+      content="AI automation, custom CRMs, workflow automation, mobile apps, Airtable, Softr, Zapier, Make, n8n"
+    />
+    <meta name="author" content="Autolinium" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
