--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- FAVICONS -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="google-site-verification"
       content="M5wDbWyrszaSpj706GO6vL8vOUow0M99rKqIxMQNBXA"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Reference robots.txt -->
     <link rel="robots" href="/robots.txt" />
 
     <!-- Primary Meta Tags -->
@@ -42,7 +35,7 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://autolinium.com/" />
 
-    <!-- Open Graph / Facebook Meta Tags -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://autolinium.com/" />
     <meta property="og:site_name" content="Autolinium" />
@@ -59,7 +52,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
 
-    <!-- Twitter Card Meta Tags -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://autolinium.com/" />
     <meta
@@ -76,22 +69,29 @@
     />
     <meta name="twitter:creator" content="@autolinium" />
 
-    <!-- Additional SEO Meta Tags -->
-    <meta name="theme-color" content="#0891b2" />
+    <!-- Theme & Mobile -->
+    <meta name="theme-color" content="#050810" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
 
-    <!-- Structured Data (JSON-LD) -->
+    <!-- FAVICONS (ONLY ONCE!) -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Structured Data (FIXED LOGO URL) -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Autolinium",
         "url": "https://autolinium.com",
-        "logo": "https://autolinium.com/assets/autolinium-logo.png",
+        "logo": "https://autolinium.com/src/assets/logo.webp",
         "description": "AI Automation Agency specializing in AI agents, custom CRMs, workflow automation, and mobile app development",
         "address": {
           "@type": "PostalAddress",
@@ -106,40 +106,22 @@
           "https://linkedin.com/company/autolinium",
           "https://twitter.com/autolinium",
           "https://facebook.com/autolinium"
-        ],
-        "service": [
-          {
-            "@type": "Service",
-            "name": "AI Agent Development",
-            "description": "Custom AI agents to automate business processes"
-          },
-          {
-            "@type": "Service",
-            "name": "CRM Development",
-            "description": "Custom CRM solutions tailored to your business needs"
-          },
-          {
-            "@type": "Service",
-            "name": "Workflow Automation",
-            "description": "Streamline operations with intelligent automation"
-          },
-          {
-            "@type": "Service",
-            "name": "Mobile App Development",
-            "description": "Native and cross-platform mobile applications"
-          }
         ]
       }
     </script>
 
-    <!-- Preconnect to external resources -->
+    <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
-    <!-- Optimized Font Loading with display=swap -->
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -154,19 +136,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       />
     </noscript>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
 
-    <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/manifest.json" />
-
-    <!-- Preload Critical Resources -->
+    <!-- Preload -->
     <link
       rel="preload"
       as="image"
@@ -178,7 +149,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- No JavaScript fallback -->
     <noscript>
       <div
         style="
