--- a/index.html
+++ b/index.html
@@ -147,39 +147,55 @@
       type="image/webp"
     />
 
-    <!-- VAPI Widget CSS -->
+    <!-- VAPI CHAT WIDGET MOBILE-FRIENDLY STYLES -->
     <style>
-      /* Ensure VAPI widget appears above React content */
-      vapi-widget {
-        z-index: 99999 !important;
-        position: fixed !important;
-        bottom: 20px !important;
-        right: 20px !important;
-        display: block !important;
-        visibility: visible !important;
-        opacity: 1 !important;
-      }
-
-      /* Container for better control */
+      /* Base widget container */
       #vapi-wrapper {
         position: fixed !important;
         bottom: 20px !important;
         right: 20px !important;
         z-index: 99999 !important;
+        width: auto !important;
+        height: auto !important;
       }
 
-      /* Mobile responsive */
-      @media (max-width: 768px) {
-        vapi-widget,
-        #vapi-wrapper {
-          bottom: 80px !important;
-          right: 15px !important;
+      /* Desktop: Compact but spacious */
+      @media (min-width: 769px) {
+        #vapi-wrapper vapi-widget {
+          width: 380px !important;
+          height: 600px !important;
+          max-width: 100vw !important;
+          max-height: 90vh !important;
         }
       }
 
-      /* Debug border - remove in production */
+      /* Mobile: Full-width, scrollable, no cutoff */
+      @media (max-width: 768px) {
+        #vapi-wrapper {
+          bottom: 10px !important;
+          right: 10px !important;
+          left: 10px !important;
+          width: calc(100% - 20px) !important;
+        }
+
+        #vapi-wrapper vapi-widget {
+          width: 100% !important;
+          height: calc(100vh - 120px) !important;
+          max-height: 80vh !important;
+          min-height: 500px !important;
+          border-radius: 16px !important;
+          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3) !important;
+        }
+      }
+
+      /* Ensure messages don't get cut */
+      vapi-widget * {
+        box-sizing: border-box !important;
+      }
+
+      /* Optional: Smooth open animation */
       vapi-widget {
-        border: 1px solid #14b8a6 !important;
+        transition: all 0.3s ease !important;
       }
     </style>
   </head>
@@ -187,7 +203,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- VAPI WIDGET - CHAT MODE -->
+    <!-- VAPI CHAT WIDGET - MOBILE OPTIMIZED -->
     <div id="vapi-wrapper">
       <vapi-widget
         public-key="bbe4d95e-f4dc-46a7-bd5b-46939cd75576"
@@ -199,11 +215,11 @@
         cta-button-color="#000000"
         cta-button-text-color="#ffffff"
         border-radius="large"
-        size="full"
+        size="compact"
         position="bottom-right"
         title="CHAT WITH US"
         start-button-text="Start"
-        end-button-text="End Call"
+        end-button-text="End"
         chat-first-message="Hey, How can I help you today?"
         chat-placeholder="Type your message..."
         voice-show-transcript="true"
@@ -214,71 +230,23 @@
       ></vapi-widget>
     </div>
 
-    <!-- VAPI Script -->
+    <!-- VAPI WIDGET SCRIPT -->
     <script
       src="https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js"
       async
       type="text/javascript"
     ></script>
 
-    <!-- Simplified Loading Script - No Timeouts -->
+    <!-- Debug (Remove in production if desired) -->
     <script>
-      (function () {
-        console.log("🚀 Initializing VAPI Chat Widget...");
-
-        // Function to check if widget is properly loaded
-        function checkWidgetStatus() {
+      window.addEventListener("load", () => {
+        setTimeout(() => {
           const widget = document.querySelector("vapi-widget");
-
-          if (widget && widget.shadowRoot) {
-            console.log("✅ VAPI chat widget fully loaded with shadow DOM");
-            console.log("🔧 Widget type:", widget.constructor.name);
-            console.log("💬 Mode: Chat");
-
-            // Apply additional styles for chat mode
-            widget.style.setProperty("width", "400px", "important");
-            widget.style.setProperty("height", "600px", "important");
-            widget.style.setProperty("max-width", "90vw", "important");
-            widget.style.setProperty("max-height", "80vh", "important");
-
-            return true;
+          if (widget?.shadowRoot) {
+            console.log("VAPI Chat Widget Loaded (Mobile Optimized)");
           }
-
-          if (widget) {
-            console.log("🔄 VAPI widget element exists but no shadow DOM yet");
-            // Check if it's a proper web component
-            if (widget.constructor.name !== "HTMLElement") {
-              console.log(
-                "✅ VAPI web component detected:",
-                widget.constructor.name
-              );
-              return true;
-            }
-          }
-
-          return false;
-        }
-
-        // Just check once when the page loads
-        window.addEventListener("load", function () {
-          console.log("📄 Page fully loaded, checking VAPI chat widget...");
-
-          // Check immediately
-          checkWidgetStatus();
-
-          // Check again after a short delay in case it's still loading
-          setTimeout(checkWidgetStatus, 1000);
-        });
-
-        // Configuration log
-        console.log("🌐 VAPI Chat Configuration:");
-        console.log("• Public Key: bbe4d95e-f4dc-46a7-bd5b-46939cd75576");
-        console.log("• Assistant ID: c70c05ce-acc7-44f8-b39a-e7dfdf0f7fd3");
-        console.log("• Mode: Chat");
-        console.log(
-          "• Script: https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js"
-        );
-      })();
+        }, 1500);
+      });
     </script>
 
     <noscript>
