--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
-    <!-- VAPI WIDGET CDN -->
     <link rel="preconnect" href="https://unpkg.com" />
 
     <!-- Fonts -->
@@ -147,55 +146,55 @@
       type="image/webp"
     />
 
-    <!-- VAPI CHAT WIDGET MOBILE-FRIENDLY STYLES -->
+    <!-- VAPI CHAT WIDGET - MOBILE FIXED -->
     <style>
-      /* Base widget container */
-      #vapi-wrapper {
+      /* Remove wrapper overlay – let widget float freely */
+      #vapi-chat-container {
         position: fixed !important;
-        bottom: 20px !important;
-        right: 20px !important;
+        bottom: 16px !important;
+        right: 16px !important;
         z-index: 99999 !important;
-        width: auto !important;
-        height: auto !important;
+        pointer-events: none !important; /* Let clicks pass through */
       }
 
-      /* Desktop: Compact but spacious */
+      #vapi-chat-container > vapi-widget {
+        pointer-events: auto !important; /* Only widget catches clicks */
+      }
+
+      /* Desktop */
       @media (min-width: 769px) {
-        #vapi-wrapper vapi-widget {
+        vapi-widget {
           width: 380px !important;
-          height: 600px !important;
+          height: 580px !important;
           max-width: 100vw !important;
           max-height: 90vh !important;
         }
       }
 
-      /* Mobile: Full-width, scrollable, no cutoff */
+      /* Mobile: Compact, scrollable, no overlay */
       @media (max-width: 768px) {
-        #vapi-wrapper {
-          bottom: 10px !important;
-          right: 10px !important;
-          left: 10px !important;
-          width: calc(100% - 20px) !important;
+        #vapi-chat-container {
+          bottom: 12px !important;
+          right: 12px !important;
+          left: auto !important;
+          width: auto !important;
         }
 
-        #vapi-wrapper vapi-widget {
-          width: 100% !important;
-          height: calc(100vh - 120px) !important;
+        vapi-widget {
+          width: 92vw !important;
+          max-width: 380px !important;
+          height: 75vh !important;
+          min-height: 480px !important;
           max-height: 80vh !important;
-          min-height: 500px !important;
-          border-radius: 16px !important;
-          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3) !important;
+          border-radius: 18px !important;
+          box-shadow: 0 12px 32px rgba(0, 0, 0, 0.4) !important;
         }
       }
 
-      /* Ensure messages don't get cut */
-      vapi-widget * {
-        box-sizing: border-box !important;
-      }
-
-      /* Optional: Smooth open animation */
-      vapi-widget {
-        transition: all 0.3s ease !important;
+      /* Ensure internal scrolling */
+      vapi-widget::part(messages) {
+        overflow-y: auto !important;
+        -webkit-overflow-scrolling: touch !important;
       }
     </style>
   </head>
@@ -203,8 +202,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- VAPI CHAT WIDGET - MOBILE OPTIMIZED -->
-    <div id="vapi-wrapper">
+    <!-- VAPI CHAT WIDGET - NO OVERLAY -->
+    <div id="vapi-chat-container">
       <vapi-widget
         public-key="bbe4d95e-f4dc-46a7-bd5b-46939cd75576"
         assistant-id="c70c05ce-acc7-44f8-b39a-e7dfdf0f7fd3"
@@ -230,39 +229,17 @@
       ></vapi-widget>
     </div>
 
-    <!-- VAPI WIDGET SCRIPT -->
+    <!-- VAPI SCRIPT -->
     <script
       src="https://unpkg.com/@vapi-ai/client-sdk-react/dist/embed/widget.umd.js"
       async
       type="text/javascript"
     ></script>
 
-    <!-- Debug (Remove in production if desired) -->
-    <script>
-      window.addEventListener("load", () => {
-        setTimeout(() => {
-          const widget = document.querySelector("vapi-widget");
-          if (widget?.shadowRoot) {
-            console.log("VAPI Chat Widget Loaded (Mobile Optimized)");
-          }
-        }, 1500);
-      });
-    </script>
-
     <noscript>
-      <div
-        style="
-          padding: 20px;
-          text-align: center;
-          background: #0891b2;
-          color: white;
-        "
-      >
+      <div style="padding:20px;text-align:center;background:#0891b2;color:white;">
         <h1>JavaScript Required</h1>
-        <p>
-          Please enable JavaScript to experience Autolinium's AI automation
-          solutions.
-        </p>
+        <p>Please enable JavaScript to use the AI chat.</p>
       </div>
     </noscript>
   </body>
