--- a/index.html
+++ b/index.html
@@ -146,55 +146,61 @@
       type="image/webp"
     />
 
-    <!-- VAPI CHAT WIDGET - MOBILE FIXED -->
+    <!-- VAPI CHAT WIDGET - MOBILE FIXED (NO OVERLAY) -->
     <style>
-      /* Remove wrapper overlay – let widget float freely */
+      /* Container: Only holds position, NO width/height */
       #vapi-chat-container {
         position: fixed !important;
         bottom: 16px !important;
         right: 16px !important;
         z-index: 99999 !important;
-        pointer-events: none !important; /* Let clicks pass through */
+        pointer-events: none !important;
+        width: auto !important;
+        height: auto !important;
       }
 
+      /* Only the widget itself gets pointer events */
       #vapi-chat-container > vapi-widget {
-        pointer-events: auto !important; /* Only widget catches clicks */
+        pointer-events: auto !important;
       }
 
-      /* Desktop */
+      /* Desktop: Nice size */
       @media (min-width: 769px) {
         vapi-widget {
           width: 380px !important;
           height: 580px !important;
-          max-width: 100vw !important;
-          max-height: 90vh !important;
         }
       }
 
-      /* Mobile: Compact, scrollable, no overlay */
+      /* Mobile: Compact bubble, NEVER full-width */
       @media (max-width: 768px) {
-        #vapi-chat-container {
-          bottom: 12px !important;
-          right: 12px !important;
-          left: auto !important;
-          width: auto !important;
-        }
-
         vapi-widget {
-          width: 92vw !important;
-          max-width: 380px !important;
-          height: 75vh !important;
-          min-height: 480px !important;
-          max-height: 80vh !important;
-          border-radius: 18px !important;
-          box-shadow: 0 12px 32px rgba(0, 0, 0, 0.4) !important;
+          width: 320px !important;
+          max-width: 92vw !important;
+          height: 500px !important;
+          min-height: 460px !important;
+          max-height: 75vh !important;
+          border-radius: 20px !important;
+          box-shadow: 0 12px 40px rgba(0, 0, 0, 0.5) !important;
+          transform: scale(1) !important;
         }
       }
 
-      /* Ensure internal scrolling */
-      vapi-widget::part(messages) {
+      /* Force internal scroll */
+      vapi-widget::part(messages),
+      vapi-widget [part="messages"] {
         overflow-y: auto !important;
         -webkit-overflow-scrolling: touch !important;
+        max-height: calc(100% - 120px) !important;
+      }
+
+      /* Remove any forced full-size */
+      vapi-widget {
+        position: relative !important;
+        left: auto !important;
+        right: auto !important;
+        top: auto !important;
+        bottom: auto !important;
       }
     </style>
   </head>
@@ -202,7 +208,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- VAPI CHAT WIDGET - NO OVERLAY -->
+    <!-- VAPI CHAT WIDGET - COMPACT & CLICKABLE -->
     <div id="vapi-chat-container">
       <vapi-widget
         public-key="bbe4d95e-f4dc-46a7-bd5b-46939cd75576"
@@ -237,7 +243,14 @@
     ></script>
 
     <noscript>
-      <div style="padding:20px;text-align:center;background:#0891b2;color:white;">
+      <div
+        style="
+          padding: 20px;
+          text-align: center;
+          background: #0891b2;
+          color: white;
+        "
+      >
         <h1>JavaScript Required</h1>
         <p>Please enable JavaScript to use the AI chat.</p>
       </div>
