--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         cta-button-color="#000000"
         cta-button-text-color="#ffffff"
         border-radius="large"
-        size="full"
+        size="tiny"
         position="bottom-right"
         title="CHAT WITH US"
         start-button-text="Start"
